set the correct z-index property

--- a/src/App.css
+++ b/src/App.css
@@ -340,7 +340,7 @@ height: 100vh;
 position: fixed;
 top: 0;
 padding: 0;
-z-index: 99999999999999999999999999;
+z-index: 999;
 transform: translate(120%,0%);
 transition: all 0.1sease-in-out;
 }
